--- a/ifeBaidu2016/Task17/task17.html
+++ b/ifeBaidu2016/Task17/task17.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>IFE JavaScript Task 17</title>
+    <style type="text/css">
+      .aqi-chart-wrap {
+        display:flex;width: 90%;
+        height: 500px;
+        justify-content: center;
+        align-items: flex-end;
+        align-content: center;
+        margin: 10px auto;
+        padding: 10px;
+        border: 2px solid #000;
+      }
+      .aqi-chart-wrap div {border: 1px solid #000;flex: 1; border: none;}
+    </style>
   </head>
 <body>
   <fieldset id="form-gra-time">
