--- a/ifeBaidu2016/Task21/task21.html
+++ b/ifeBaidu2016/Task21/task21.html
@@ -10,7 +10,7 @@
 	.queue div {color:white; display: inline-block; border: none; border-radius: 10%; min-width: 40px; height: 30px; padding: 5px; margin: 10px 5px; text-align: center;}
 	.tag div {background-color: lightblue;}
 	.hobby div {background-color: yellow;}
-	.queue div:hover {background-color: red;}
+	.queue>div:hover {background-color: red;cursor: pointer;}
 	.confirm {margin: 10px auto; cursor: pointer;}
 	</style>
 </head>
