--- a/ifeBaidu2016/Task37/组件modal.html
+++ b/ifeBaidu2016/Task37/组件modal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>modal组件实践</title>
+    <title>modal组件实践 task38 浮出层</title>
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="modal.css">
     <style type="text/css">
